2008-01-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	MinGW specific: Removed Makefile.studio.mingw file; compilation in MinGW now
	uses only Makefile.mingw. Compilation/distribution os ES and the GIMP plug-in
	is done with the (self-explanatory) commands 'studioinstall', 'studiodist',
	'maptools', 'maptoolsinstall', 'maptoolsdist' and 'studioclean'.
	Makefile.mingw commands 'allclean' and 'allinstall' also clean and install
	(respectivelly) Exult Studio (but not the GIMP plug-in).
	Also updated Readme.win32 accordingly.

2008-01-19	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Added overloaded methods for Fast_pathfinder_client::is_grabable to make
	  use of the new distance function.
	* Exult Studio/Exult can now search for a shape of a given frame as well.
	* Fixed can_avatar_reach_pos intrinsic.
	* Switched from DELTA_WRAP_CHECK and DELTA_CHECK macros to static inline
	  functions to prevent possible undetected problems.
	* Update of MSVC projects, including a new project for ES (though I doubt
	  it compiles).

2008-01-11    <jeff@mini.nerble.net>

	* actions.cc (Path_walking_actor_action): 'speed' wasn't being
	initialized, sometimes causing SI to hang at start.

2008-01-09    <jeff@mini.nerble.net>

	* objs/objs.cc: Fixed macro bug in DELTA_WRAP_CHECK that affected
	the 'distance' computation.

2008-01-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: fix --buildmap

2007-12-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc, actions.h: Fixed crash when avatar finishes a usecode path.
	  Double-stepping problem is completelly fixed, resulting in perfectly
	  smooth scrolling if it is enabled. Also, added slight delay at the end
	  of all acions, whether they are done by the avatar or by other NPCs.
	* paths.cc, tiles.h, objs/objs.cc: Fixed distance function so it actualy
	  does what it should. Added back a 2d distance function for pathfinders.

2007-12-05    <jeff@mini.nerble.net>
